feat: Add comprehensive deployment configuration with CORS support
- Update CORS configuration for production deployment
- Add environment-based origin control for security
- Create production application configuration with monitoring
- Add Docker multi-stage build for frontend and backend
- Create docker-compose setup with PostgreSQL integration
- Add automated deployment script with health checks
- Create comprehensive deployment documentation
- Add environment variable templates for easy setup
- Support multiple deployment options (Docker, cloud platforms)
- Include security best practices and troubleshooting guide

Features:
- Production-ready CORS configuration
- Docker containerization with health checks
- Environment-based configuration management
- Automated deployment pipeline
- Comprehensive monitoring and logging
- Security hardening recommendations
- Multiple cloud deployment options