@@ -21,6 +21,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -62,10 +63,28 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000", "http://127.0.0.1:63607", "http://localhost:63607"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        
+        // Development origins
+        List<String> allowedOrigins = new ArrayList<>(Arrays.asList(
+            "http://localhost:5173", 
+            "http://localhost:3000", 
+            "http://127.0.0.1:63607", 
+            "http://localhost:63607"
+        ));
+        
+        // Production origins - add your deployed frontend URLs here
+        String productionOrigins = System.getenv("ALLOWED_ORIGINS");
+        if (productionOrigins != null && !productionOrigins.trim().isEmpty()) {
+            Arrays.stream(productionOrigins.split(","))
+                  .map(String::trim)
+                  .forEach(allowedOrigins::add);
+        }
+        
+        configuration.setAllowedOrigins(allowedOrigins);
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
